[project]
name = "cloudinary-mcp-server"
version = "0.1.0"
description = "Cloudinary-MCP-Server optimizes and manages Cloudinary’s image hosting, providing efficient media storage, processing, and delivery to enhance app performance and user experience."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.43.0",
    "httpx>=0.28.1",
]
